Fix one test